# MakerMatrix

./: .dockerignore  .env.docker.example  .env.example  .env.https  .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CLEANUP_REPORT.md  COMPREHENSIVE_ROUTE_ANALYSIS.md  CONTAINER_SLOTS_FEATURE.md  CONTAINER_SLOTS_PHASE1_MODEL_CHANGES.md  CONTAINER_SLOTS_PHASE1_SERVICE_IMPLEMENTATION.md  CONTRIBUTING.md  CSV_TASK_CONSOLIDATION_PLAN.md  Developer.md  Dockerfile  ENRICHMENT_FIXES_SUMMARY.md  ENRICHMENT_REQUIREMENTS_DESIGN.md  FINAL_ROUTE_STRUCTURE.md  FRONTEND_TESTING_PLAN.md  FRONTEND_TEST_CHECKLIST.md  GEMINI.md  INITIAL-SUPPLIERS.md  INITIAL.md  INSTALLATION.md  Makefile  PART_DELETION_FIXES_SUMMARY.md  PHASE1_API_IMPLEMENTATION_SUMMARY.md  PROJECT_DESCRIPTION.md  QR_ENRICHMENT_USAGE.md  README.md  ROUTE_CLEANUP_SUMMARY.md  ROUTE_REORGANIZATION_PLAN.md  ROUTE_REORGANIZATION_STATUS.md  SECURITY_FINDINGS_SUMMARY.json  SUPPLIER_PRICE_UPDATE_ARCHITECTURE.md  TEMPLATE_SYSTEM_FINAL_STATUS.md  TEMPLATE_USER_GUIDE.md  TODO.txt  (+112 more)
.claude/agents/: database-architecture-expert.md  react-component-architect.md
.github/workflows/: backend-quality.yml  docker-build.yml  frontend-tests.yml  release.yml  security-scanning.yml
.husky/: pre-commit
MakerMatrix/: PROJECT_STATUS.md  README.md  __init__.py  api.md  dependencies.py  exceptions.py  main.py  makers_matrix.db  part_inventory.json  test_mouser_xls_import.py
MakerMatrix/ai-model/: .gitignore  README.md  STATUS.md  TRAINING_GUIDE.md  convert_labeled_to_training.py  convert_orders_to_training_data.py  download_lcsc_database.py  extract_from_orders.py  extract_training_data.py  extraction_prompt.txt  label_with_llm.py  labeled_2025-09-30.jsonl  lcsc_api.py  lcsc_api_flask.py  prepare_training_data.py  requirements.txt  review_labels.html  spaCy.md  test_model.py  test_on_orders.py  train_ollama.py  train_spacy.py  train_transformer.py
MakerMatrix/api/: easyeda.py
MakerMatrix/auth/: dependencies.py  guards.py
MakerMatrix/clients/: __init__.py  base_client.py  exceptions.py  rest_client.py
MakerMatrix/database/: db.py
MakerMatrix/dependencies/: __init__.py  auth.py
MakerMatrix/frontend/: .env.development  .eslintrc.json  .lintstagedrc.json  .prettierignore  .prettierrc  .ts-unused-exports.json  CODE_QUALITY.md  README.testing.md  babel.config.js  index.html  package-lock.json  package.json  playwright.config.ts  puppeteer-navigation-map.js  run-supplier-tests.sh  tailwind.config.js  test-file-preview-xls.mjs  test-results.json  test-xls-parsing.mjs  tsconfig.build.json  tsconfig.json  unused-exports-report.json  vite.config.ts  vitest.config.ts
MakerMatrix/handlers/: exception_handlers.py
MakerMatrix/integration_tests/: test_printer_service.py
MakerMatrix/lib/: connection.py  database.py  job_manager.py  my_routes.py  printer.py  (+4 more)
PRPs/: old-lcsc-csv-import-fix.md  supplier-framework-standardization.md
backup/: digikey_parser.py  lcsc_parser.py  mouser_parser.py  parser.py
certs/: cert.pem  key.pem  openssl.conf
digikey_tokens/: digikey-api.pem  localhost.pem
docs/: CONFIGURATION.md  DOCKER.md  FEATURES.md  INSTALLATION.md  README.md
lib/: database.py  my_routes.py  optional_input.py  parser_manager.py  part_inventory.py  routes.py  websockets.py
models/: category_model.py  location_model.py  part_model.py
parsers/: boltdepot_parser.py  lcsc_parser.py  mouser_parser.py  parser.py
parts/: parts.py
repositories/: category_repositories.py  location_repositories.py  parts_repositories.py
routers/: categories_routes.py  locations_routes.py  parts_routes.py  printer_routes.py  utlity_routes.py
scripts/: HTTPS_SETUP.md  bump_version.py  check_api_consistency.py  create_admin_api_key.py  dead_code_analysis.py  docker-run.sh  download_supplier_icons.py  generate_openapi.py  migrate_credentials_to_database.py  migrate_datasheet_urls.py  migrate_location_constraint.py  migrate_missing_allocations.py  migrate_quantity_to_allocations.py  recreate_credentials_table.py  reset_admin_password.py  restore_quantities_from_backup.py  restore_slot_allocations.py  setup_https.py  test_duplicate_slots.py  test_location_rename_issue.py  test_websocket_live.py  update_project_permissions.py
services/: category_service.py  location_service.py  part_service.py  printer_service.py
test/: test_boltdepo_parser.py
tests/: INTEGRATION_TESTING.md  SECURITY_TESTING.md  __init__.py  manual_security_exploit.py  manual_test_datasheet_task_integration.py  security_assessment_full_report.json  security_audit_report.json  security_exploitation_results.json  test_admin_rate_limit_exemption.py  test_backup_permissions.py  test_backup_restore_integration.py  test_backup_routes.py  test_backup_scheduler.py  test_backup_tasks.py  test_categories.py  test_container_slot_generation.py  test_datasheet_download_task.py  test_datasheet_standardization.py  test_enrichment_api_integration.py  test_enrichment_engine.py  test_lcsc_enrichment_fix.py  test_location_image_persistence.py  test_location_rename_allocations.py  test_location_rename_allocations_simple.py  test_locations.py  test_mcmaster_enrichment_mapping.py  test_modular_supplier_detection.py  test_part_emoji_persistence.py  test_part_service.py  test_part_service_datasheet_cleanup.py  test_qr_enrichment_fix.py  test_security_fixes.py  test_security_permission_bypass.py  test_security_privilege_escalation.py  test_security_unauthenticated_access.py  test_supplier_capabilities_comprehensive.py  test_supplier_data_mapper_refactored.py  test_supplier_data_standardization.py  test_supplier_map_to_standard_format.py  test_supplier_name_handling.py  (+6 more)
venv310/: pyvenv.cfg
venv_ci_test/: pyvenv.cfg
venv_test_new/: pyvenv.cfg
(+827 files in other folders)
