[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MakerMatrix"
version = "0.1.0"
description = "A powerful, modern electronic parts inventory management system designed for makers, engineers, and electronics enthusiasts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MakerMatrix Contributors"}
]
keywords = ["inventory", "electronics", "parts", "management", "maker"]

# Dependencies are managed in requirements.txt
# Install with: pip install -r requirements.txt

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "critical: marks tests as critical security tests",
]
testpaths = ["MakerMatrix/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | venv_test
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | MakerMatrix/frontend
)/
''' 