[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MakerMatrix"
version = "0.1.0"
description = "A powerful, modern electronic parts inventory management system designed for makers, engineers, and electronics enthusiasts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MakerMatrix Contributors"}
]
keywords = ["inventory", "electronics", "parts", "management", "maker"]

# Dependencies are managed in requirements.txt
# Install with: pip install -r requirements.txt

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "critical: marks tests as critical security tests",
]
testpaths = ["MakerMatrix/tests", "MakerMatrix/integration_tests", "MakerMatrix/unit_tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers -m \"not integration\""

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | venv_test
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | MakerMatrix/frontend
)/
'''

[tool.vulture]
min_confidence = 80
exclude = [
    "venv_test/",
    "venv_test_new/",
    "*.pyc",
    "__pycache__/",
    "node_modules/",
    "dist/",
    "coverage/",
    ".pytest_cache/",
    ".git/",
    # Legacy/experimental code that may have unused components
    "MakerMatrix/lib/",
    # Task implementations that are registered via class discovery
    "MakerMatrix/tasks/",
    # Test utilities and fixtures
    "MakerMatrix/tests/conftest.py"
]

# Configuration for ignoring false positives
# Add paths to files with intentional unused code
ignore_names = [
    # Test fixtures that appear unused but are used by pytest
    "setup_*",
    "clean_*",
    "sample_*",
    "*_fixture",
    # Common test variables
    "client",
    "session",
    # Database engine parameter used in event handlers
    "connection_record",
    # Imports that are re-exported
    "LabelData",
    "PydanticField",
    "EnrichmentProfileModel",
    "DateTime",
    "Boolean",
    "Integer",
    "Text",
    "relationship",
    "Form",
    "OAuth2PasswordRequestForm",
    "GenericPartQuery",
    "UpdateQuantityRequest",
    "Coroutine",
    "user_models",
    "pytest_asyncio",
    "get_all_suppliers_info",
    "TaskSecurityError",
    "AsyncGenerator",
    # Abstract method parameters
    "print_config",
    # Pytest parametrize parameters that may not be directly used in test body
    "expected_error",
    # Pydantic model configuration
    "model_config",
    # Mock test attributes that appear unused
    "side_effect",
    "__aexit__",
    # FastAPI lifespan function
    "lifespan",
    # Task classes used by task system
    "*Task",
    # Exception handlers registered with FastAPI
    "*_handler",
    # Public API functions that may not be called internally
    "serve_*",
    # Test markers
    "pytestmark",
    # Task discovery functions
    "get_task_class",
    "list_available_tasks"
]

# Paths to ignore completely
ignore_decorators = [
    "@pytest.fixture",
    "@app.middleware",
    "@app.on_event"
]